Only use crypt() if it's available

--- a/configure.in
+++ b/configure.in
@@ -2301,7 +2301,6 @@ dnl Check for library functions
 AC_CHECK_FUNCS(\
 	bcopy \
 	backtrace_symbols_fd \
-	crypt \
 	fchmod \
 	getdtablesize \
 	getpagesize \
@@ -2359,6 +2358,11 @@ AC_CHECK_FUNCS(\
 SAVED_LIBS="$LIBS"
 LIBS="$LIBS $LIB_EPOLL"
 AC_CHECK_FUNCS(epoll_ctl)
+LIBS="$SAVED_LIBS"
+
+SAVED_LIBS="$LIBS"
+LIBS="$LIBS $CRYPTLIB"
+AC_CHECK_FUNCS(crypt)
 LIBS="$SAVED_LIBS"
 
 dnl Verify that epoll really works
