--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -697,7 +697,7 @@ AC_ARG_ENABLE(ssl,
     AM_CONDITIONAL(ENABLE_SSL, true)
     case "$host_os" in
     mingw|mingw32)
-	SSLLIB='-lssl -lcrypto -lgdi32'
+	SSLLIB='-lssleay32 -leay32 -lgdi32'
 	;;
     *)
 	SSLLIB='-lssl -lcrypto'
