--- a/branches/SQUID_2_6/configure.in
+++ b/branches/SQUID_2_6/configure.in
@@ -2430,6 +2430,65 @@ AM_CONDITIONAL([USE_SELECT_SIMPLE], [test $SELECT_TYPE = select_simple])
 AM_CONDITIONAL([USE_SELECT_WIN32], [test $SELECT_TYPE = select_win32])
 AM_CONDITIONAL([USE_KQUEUE], [test $SELECT_TYPE = kqueue])
 
+dnl Hmm.. some OS:es (i.e. FreeBSD) can't handle large AF_UNIX dgram packets.
+dnl Verify that at least 16K is supported, if not fall back on using
+dnl IP dgram sockets for IPC.
+AC_CACHE_CHECK(if AF_UNIX dgram sockets support large packets, ac_cv_af_unix_large_dgram,
+  AC_TRY_RUN([
+#include <sys/types.h>
+#include <sys/socket.h>
+#include <unistd.h>
+#include <stdlib.h>
+#include <stdio.h>
+
+#define BUFSIZE 16384
+  void consumer(int s)
+  {
+      char buf[[BUFSIZE]];
+      int len;
+      len = recv(s, buf, sizeof(buf), 0);
+  }
+
+  void sender(int s)
+  {
+      char buf[[BUFSIZE]];
+      int len = sizeof(buf);
+      int rc = send(s, buf, len, 0);
+      if (rc < 0) {
+	  perror("send");
+	  exit(1);
+      }
+      if (rc != len) {
+	  fprintf(stderr, "Short send %d of %d\n", rc, len);
+	  exit(1);
+      }
+  }
+
+  int main(int argc, char **argv)
+  {
+      int s[[2]];
+      pid_t pid;
+      socketpair(AF_UNIX, SOCK_DGRAM, 0, s);
+      pid = fork();
+      if (pid < 0) {
+	  perror("fork");
+	  exit(0);
+      }
+      if (pid == 0) {
+	  close(s[[0]]);
+	  consumer(s[[1]]);
+      } else {
+	  close(s[[1]]);
+	  sender(s[[0]]);
+      }
+      return 0;
+  }
+  ], ac_cv_af_unix_large_dgram="yes",ac_cv_af_unix_large_dgram="no")
+)
+if test "$ac_cv_af_unix_large_dgram" = "yes" ; then
+    AC_DEFINE(SUPPORTS_LARGE_AF_UNIX_DGRAM, 1, [Supports large dgram sockets over AF_UNIX sockets])
+fi
+
 dnl Yay!  Another Linux brokenness.  Its not good enough
 dnl to know that setresuid() exists, because RedHat 5.0 declares
 dnl setresuid() but doesn't implement it.
