--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -2437,19 +2437,34 @@ AC_CACHE_CHECK(if AF_UNIX dgram sockets support large packets, ac_cv_af_unix_lar
   AC_TRY_RUN([
 #include <sys/types.h>
 #include <sys/socket.h>
+#if HAVE_SYS_SELECT_H
+#include <sys/select.h>
+#else
+#include <sys/time.h>
+#endif
 #include <unistd.h>
 #include <stdlib.h>
 #include <stdio.h>
 
 #define BUFSIZE 16384
-  void consumer(int s)
+  void consumer(int s, int p)
   {
+      fd_set fds;
       char buf[[BUFSIZE]];
       int len;
-      len = recv(s, buf, sizeof(buf), 0);
+      int nfds = p > s ? p + 1 : s + 1;
+      int rc;
+      FD_ZERO(&fds);
+      FD_SET(s, &fds);
+      FD_SET(p, &fds);
+      rc = select(nfds, &fds, NULL, NULL, NULL);
+      if (rc < 0)
+	    exit(1);
+      if (FD_ISSET(s, &fds))
+	  len = recv(s, buf, sizeof(buf), 0);
   }
 
-  void sender(int s)
+  void sender(int s, int p)
   {
       char buf[[BUFSIZE]];
       int len = sizeof(buf);
@@ -2467,8 +2482,10 @@ AC_CACHE_CHECK(if AF_UNIX dgram sockets support large packets, ac_cv_af_unix_lar
   int main(int argc, char **argv)
   {
       int s[[2]];
+      int p[[2]];
       pid_t pid;
       socketpair(AF_UNIX, SOCK_DGRAM, 0, s);
+      pipe(p);
       pid = fork();
       if (pid < 0) {
 	  perror("fork");
@@ -2476,10 +2493,12 @@ AC_CACHE_CHECK(if AF_UNIX dgram sockets support large packets, ac_cv_af_unix_lar
       }
       if (pid == 0) {
 	  close(s[[0]]);
-	  consumer(s[[1]]);
+	  close(p[[0]]);
+	  consumer(s[[1]],p[[1]]);
       } else {
 	  close(s[[1]]);
-	  sender(s[[0]]);
+	  close(p[[1]]);
+	  sender(s[[0]],p[[0]]);
       }
       return 0;
   }
