This commit was manufactured by cvs2svn to create tag 'SQUID_2_6_STABLE10'.

--- a/configure.in
+++ b/configure.in
@@ -5,7 +5,7 @@ dnl  $Id$
 dnl
 dnl
 dnl
-AC_INIT(Squid Web Proxy, 2.HEAD-CVS, http://www.squid-cache.org/bugs/, squid)
+AC_INIT(Squid Web Proxy, 2.6.STABLE10-CVS, http://www.squid-cache.org/bugs/, squid)
 AC_PREREQ(2.52)
 AM_CONFIG_HEADER(include/autoconf.h)
 AC_CONFIG_AUX_DIR(cfgaux)
@@ -2354,6 +2354,8 @@ AC_CHECK_FUNCS(\
 	syslog \
 	timegm \
 	vsnprintf \
+	bswap_16 \
+	bswap_32 \
 )
 
 SAVED_LIBS="$LIBS"
