--- a/branches/SQUID_NT_2_6/Makefile.in
+++ b/branches/SQUID_NT_2_6/Makefile.in
@@ -253,7 +253,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 AUTOMAKE_OPTIONS = dist-bzip2 subdir-objects 1.5
-DIST_SUBDIRS = lib snmplib scripts src icons errors contrib doc helpers tools
+DIST_SUBDIRS = lib snmplib scripts src icons errors contrib doc helpers tools port
 SUBDIRS = lib @makesnmplib@ scripts src icons errors doc helpers tools
 DISTCLEANFILES = include/stamp-h include/stamp-h[0-9]*
 DEFAULT_PINGER = $(libexecdir)/`echo pinger | sed '$(transform);s/$$/$(EXEEXT)/'`
