Portability: statfs() may requiore #include <sys/statfs.h>
Systems only implementing statfs() and not the newer statvfs() call may
need the sys/statfs.h include.

--- a/configure.in
+++ b/configure.in
@@ -1625,6 +1625,7 @@ AC_CHECK_HEADERS(
 	sys/poll.h \
 	sys/select.h \
 	sys/stat.h \
+	sys/statfs.h \
 	sys/statvfs.h \
 	syscall.h \
 	sys/syscall.h \
