MFC: Fix fs / auth / snmp dependencies
Dependencies for some of the internal libraries was missing, resuling in
the squid binary not always rebuilt on source changes.

Note: There still is no dependencies to lib/ sources. Only added dependencies
for libraries referenced directly by their .a file, not -l libraries.

--- a/branches/SQUID_2_6/src/Makefile.am
+++ b/branches/SQUID_2_6/src/Makefile.am
@@ -267,6 +267,12 @@ squid_LDADD = \
 	@XTRA_LIBS@ \
 	$(MINGWEXLIB)
 
+squid_DEPENDENCIES = \
+	$(REPL_OBJS) \
+	$(STORE_OBJS) \
+	$(AUTH_OBJS) \
+	$(SNMPLIB)
+
 unlinkd_SOURCES = 
 unlinkd_LDADD = unlinkd-daemon.o
 unlinkd-daemon.o: unlinkd.c
