Implement /dev/poll support in Squid-2; add commOpen/commClose hooks for notification
The /dev/poll stuff requires submitting updates in batches via a write();
notifications are received via an ioctl(). Some extra magic is kept around
to zero entries in the pending op list so we don't queue FD updates for FDs
that are close.d

This code is very simple stuff; I'm worried that I've missed
a corner case or two. But it seems to work under load. Specifically;
I'd like to find what might cause an update failure mode and
see how I can recover from it.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -88,6 +88,9 @@ endif
 if USE_KQUEUE
 COMMLOOP_SOURCE = comm_kqueue.c
 endif
+if USE_DEVPOLL
+COMMLOOP_SOURCE = comm_devpoll.c
+endif
 
 SUBDIRS		= fs repl auth
 
@@ -132,6 +135,7 @@ EXTRA_squid_SOURCES = \
 	comm_select_win32.c \
 	comm_select_simple.c \
 	comm_kqueue.c \
+	comm_devpoll.c \
 	comm_generic.c \
 	ipc.c \
 	ipc_win32.c \
