--- a/configure.in
+++ b/configure.in
@@ -927,6 +927,27 @@ AC_ARG_ENABLE(kqueue,
   esac
 ])
 
+dnl Enable devpoll
+AC_ARG_ENABLE(devpoll,
+[  --enable-devpoll       Force the use of devpoll even if automatic checks
+                          indicate devpoll may not be supported.
+  --disable-devpoll       Disable devpoll support. ],
+
+[
+  case "$enableval" in
+  yes)
+    echo "Forcing devpoll to be enabled"
+    SELECT_TYPE="devpoll"
+    ac_cv_func_devpoll='yes'
+    ;;
+  no)
+    echo "Forcing devpoll to be disabled"
+    ac_cv_func_devpoll='no'
+    ;;
+  esac
+])
+
+
 dnl Disable HTTP violations
 HTTP_VIOLATIONS=1
 AC_ARG_ENABLE(http-violations,
@@ -2428,6 +2449,8 @@ AM_CONDITIONAL([USE_SELECT], [test $SELECT_TYPE = select])
 AM_CONDITIONAL([USE_SELECT_SIMPLE], [test $SELECT_TYPE = select_simple])
 AM_CONDITIONAL([USE_SELECT_WIN32], [test $SELECT_TYPE = select_win32])
 AM_CONDITIONAL([USE_KQUEUE], [test $SELECT_TYPE = kqueue])
+AM_CONDITIONAL([USE_DEVPOLL], [test $SELECT_TYPE = devpoll])
+
 
 dnl Hmm.. some OS:es (i.e. FreeBSD) can't handle large AF_UNIX dgram packets.
 dnl Verify that at least 16K is supported, if not fall back on using
