Database auth helper using Perl DBI

--- a/helpers/basic_auth/Makefile.am
+++ b/helpers/basic_auth/Makefile.am
@@ -3,5 +3,5 @@
 #  $Id$
 #
 
-DIST_SUBDIRS	= getpwnam LDAP MSNT multi-domain-NTLM NCSA PAM SMB YP SASL mswin_sspi
+DIST_SUBDIRS	= getpwnam LDAP MSNT multi-domain-NTLM NCSA PAM SMB YP SASL mswin_sspi DB
 SUBDIRS		= @BASIC_AUTH_HELPERS@
