--- a/trunk/helpers/basic_auth/Makefile.in
+++ b/trunk/helpers/basic_auth/Makefile.in
@@ -240,7 +240,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-DIST_SUBDIRS = getpwnam LDAP MSNT multi-domain-NTLM NCSA PAM SMB YP SASL mswin_sspi
+DIST_SUBDIRS = getpwnam LDAP MSNT multi-domain-NTLM NCSA PAM SMB YP SASL mswin_sspi DB
 SUBDIRS = @BASIC_AUTH_HELPERS@
 all: all-recursive
 
