--- a/branches/SQUID_2_6/configure.in
+++ b/branches/SQUID_2_6/configure.in
@@ -3172,6 +3172,7 @@ AC_OUTPUT([\
 	helpers/basic_auth/mswin_sspi/Makefile \
 	helpers/basic_auth/multi-domain-NTLM/Makefile \
 	helpers/basic_auth/SASL/Makefile \
+	helpers/basic_auth/DB/Makefile \
 	helpers/digest_auth/Makefile \
 	helpers/digest_auth/password/Makefile \
 	helpers/digest_auth/ldap/Makefile \
