--- a/configure.in
+++ b/configure.in
@@ -3194,6 +3194,7 @@ AC_OUTPUT([\
 	helpers/digest_auth/Makefile \
 	helpers/digest_auth/password/Makefile \
 	helpers/digest_auth/ldap/Makefile \
+	helpers/digest_auth/eDirectory/Makefile \
 	helpers/ntlm_auth/Makefile \
 	helpers/ntlm_auth/fakeauth/Makefile \
 	helpers/ntlm_auth/mswin_sspi/Makefile \
