--- a/branches/SQUID_2_6/helpers/digest_auth/Makefile.in
+++ b/branches/SQUID_2_6/helpers/digest_auth/Makefile.in
@@ -240,7 +240,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-DIST_SUBDIRS = password ldap
+DIST_SUBDIRS = password ldap eDirectory
 SUBDIRS = @DIGEST_AUTH_HELPERS@
 all: all-recursive
 
