Author: Dave Dykstra <dwd@fnal.gov> -I command line option to accept open socket on stdin
This is a patch to add a '-I' option to squid that overrides the configured
http port with a bound socket passed in on standard input, for starting Squid
from inetd or similar port monitor.

This also allows for a method having multiple Squid instances listening on
the same port.

--- a/doc/squid.8.in
+++ b/doc/squid.8.in
@@ -6,7 +6,7 @@ squid \- proxy caching server
 .SH SYNOPSIS
 .B squid
 [
-.B \-dhirsvzCDFNRVYX
+.B \-dhirsvzCDFINRVYX
 ] [
 .BI \-l " facility"
 ] [
@@ -100,6 +100,8 @@ Do not catch fatal signals.
 Disable initial DNS tests.
 .IP -F
 Don't serve any requests until store is rebuilt.
+.IP -I
+Override first HTTP port with the bound socket passed in on standard input.
 .IP -N
 No daemon mode.
 .IP "-O options"
