Imported squid_radius_auth from Squid-3
squid_radius_auth is a basic authentication helper for connecting
to RADIUS

--- a/helpers/basic_auth/Makefile.am
+++ b/helpers/basic_auth/Makefile.am
@@ -3,5 +3,5 @@
 #  $Id$
 #
 
-DIST_SUBDIRS	= getpwnam LDAP MSNT multi-domain-NTLM NCSA PAM SMB YP SASL mswin_sspi POP3 DB
+DIST_SUBDIRS	= getpwnam LDAP MSNT multi-domain-NTLM NCSA PAM SMB YP SASL mswin_sspi POP3 DB squid_radius_auth
 SUBDIRS		= @BASIC_AUTH_HELPERS@
