An initial port of Tim Starling's UDP logging patch, implemented as a logfile module

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -204,6 +204,8 @@ squid_SOURCES = \
 	logfile_mod_stdio.h \
 	logfile_mod_syslog.c \
 	logfile_mod_syslog.h \
+	logfile_mod_udp.c \
+	logfile_mod_udp.h \
 	main.c \
 	mem.c \
 	MemPool.c \
