Initial patch to support rewriting the URL used for store operations
* break out the redirector code from store_client.c into an external file
* create a placeholder file for the new store url rewriter (which will borrow
  heavily from the rewriter code)
* copy the redirector code (suitably renamed) to serve as a base for
  the store url rewriter.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -156,6 +156,8 @@ squid_SOURCES = \
 	cbdata.c \
 	client_db.c \
 	client_side.c \
+	client_side_rewrite.c \
+	client_side_storeurl_rewrite.c \
 	comm.c \
 	$(COMMLOOP_SOURCE) \
 	debug.c \
@@ -223,6 +225,7 @@ squid_SOURCES = \
 	peer_userhash.c \
 	protos.h \
 	redirect.c \
+	store_rewrite.c \
 	referer.c \
 	refresh.c \
 	send-announce.c \
