Bug #7: Update stored headers with headers from 304 responses
This patch updates the stored headers after seeing a 304 response. Currently
implemented by rewriting the whole object but may be optimized to rewrite only
the header portion the day the store interface supports this.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -248,6 +248,7 @@ squid_SOURCES = \
 	store_swapin.c \
 	store_swapmeta.c \
 	store_swapout.c \
+	store_update.c \
 	structs.h \
 	tools.c \
 	typedefs.h \
